<resources>
    <string name="app_name">MyFlexibleFragment</string>
    <string name="this_profile">Ini activity Profile</string>
    <string name="this_category">Ini fragment Category</string>
    <string name="category_lifestyle">Ke fragment Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">Ke Halaman Profile</string>
    <string name="show_dialog">Tampilkan sebuah dialog</string>
    <string name="hello_home_fragment">Halo ini Home Fragment</string>
    <string name="to_category">Ke Fragment Kategory</string>
    <string name="question_coach">Siaavid Moyespa pelatih tersukses Manchester United?</string>
    <string name="sir_alex">Sir Alex ferguson</string>
    <string name="jose_m">Jose Mourinho</string>
    <string name="louis_van">Louis Van Gaal</string>
    <string name="david_m">David Moyes</string>
    <string name="choose">Pilih</string>
    <string name="close">Tutup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>